# wordcloud

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
my-wordcloud/: books_utils.py  cloud.py  linguistics.py  utils.py
my_wordcloud/: cloud.py  linguistics.py  utils.py
my_wordcloud/tests/: utils_test.py
